--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
 cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
-secret-toolkit = { version = "0.3", default-features = false, features = ["storage", "serialization", "utils", "permit"] }
+secret-toolkit = { version = "0.3", default-features = false, features = ["storage", "serialization", "utils", "permit", "snip20"] }
 serde-json-wasm = "0.2.1"
 schemars = "0.7"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
